# ChessComplexity

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: publish-review-site.yml
apps/: README.md
apps/review-site/: README.md
automations/: README.md  checklist.md
automations/prompts/: 01_env_and_tools.md  02_download_10_games.md  03_install_maia2.md  04_parse_and_filter.md  05_policy_inference.md  06_complexity_scoring.md  07_png_render_and_save.md  08_review_bundle.md
configs/experiments/: balanced_100_games.yaml  first_full_test.template.yaml  rank_bucket_comparison.template.yaml  rank_bucket_comparison_100_games.yaml  realizability_probe.template.yaml  realizability_probe_100_games.yaml  stockfish_time_budget_sweep.template.yaml  stockfish_time_budget_sweep_overnight_1800.yaml  stockfish_time_budget_sweep_pilot_10.yaml
data/: README.md
data/manifests/: 20260509_balanced_100_games.json  (+1 more)
docs/: artifact_schema.md  mvp_spec.md
models/: README.md
outputs/: README.md
scripts/: README.md  build_review_bundle.py  build_review_site.py  download_lichess_games.py  parse_and_filter_positions.py  render_sample_boards.py  report_experiment_stats.py  run_policy_expansion.py  run_reviewable_experiment.py  score_complexity.py  verify_maia2.py
src/: __init__.py  cli.py  config.py
tests/: test_board_png.py  test_maia2_adapter.py  test_parse_and_filter.py  test_rank_bucket_comparison.py  test_realizability.py  test_sampling.py  test_simple_metric.py  test_smoke.py  test_stockfish_adapter.py  test_time_budget_sweep.py
(+183 files in other folders)
